// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StackedBarChart /> AmountBasedWithSelection story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1wtrkdh"
        width="360px"
      >
        <div
          class="css-pjhx4n"
          color="#8b78c4"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-f2dwgl"
          color="#c475ac"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1x7shf8"
          color="#d08786"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1qhlx2k"
          color="#c1a273"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-s4kmda"
          color="#aab977"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1rrcdpo"
          color="#95cc92"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p3jsrh"
          color="#a9d0e6"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-eqaa9o"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 117 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-fdasty"
            color="#8b78c4"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            117 datasets
          </span>
        </div>
        <div
          aria-label="Imaging: 61 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-167e66x"
            color="#c475ac"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            61 datasets
          </span>
        </div>
        <div
          aria-label="Sequencing: 34 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1pfbiry"
            color="#d08786"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            34 datasets
          </span>
        </div>
        <div
          aria-label="Proteomics: 15 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-mjzweb"
            color="#c1a273"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15 datasets
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1a9itgu"
            color="#aab977"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            78 datasets
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-podhm1"
            color="#95cc92"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            130 datasets
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100 datasets"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-189602o"
            color="#a9d0e6"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            100 datasets
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165 datasets"
          aria-pressed="false"
          class="css-h7y9mc"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-1qcdcmx"
          />
          <span
            class="css-1sjvubj"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-ncdzc3"
            disabled=""
          >
            165 datasets
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Select All
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-gkrbfh-MuiButtonBase-root-MuiButton-root"
        data-style="minimal"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Clear Selection
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap;"
    />
  </div>
</div>
`;

exports[`<StackedBarChart /> Default story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1wtrkdh"
        width="360"
      >
        <div
          class="css-ju3tfv"
          color="#8b78c4"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-zelymr"
          color="#c475ac"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-3orsqd"
          color="#d08786"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-ixw05v"
          color="#c1a273"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-12nkgds"
          color="#aab977"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1epb59t"
          color="#95cc92"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1mxzqmj"
          color="#a9d0e6"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-fdasty"
            color="#8b78c4"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-167e66x"
            color="#c475ac"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1pfbiry"
            color="#d08786"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-mjzweb"
            color="#c1a273"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1a9itgu"
            color="#aab977"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-podhm1"
            color="#95cc92"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-189602o"
            color="#a9d0e6"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StackedBarChart /> WithExitAnimations story renders snapshot 1`] = `
<div>
  <div
    style="margin-bottom: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Remove First
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Remove Last
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Remove Random
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Remove All
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-gkrbfh-MuiButtonBase-root-MuiButton-root"
        data-style="minimal"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Reset
      </button>
    </div>
  </div>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        With exit animations
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1wtrkdh"
        width="360px"
      >
        <div
          class="css-pjhx4n"
          color="#8b78c4"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-f2dwgl"
          color="#c475ac"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1x7shf8"
          color="#d08786"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1qhlx2k"
          color="#c1a273"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-s4kmda"
          color="#aab977"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1rrcdpo"
          color="#95cc92"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1p3jsrh"
          color="#a9d0e6"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-eqaa9o"
          disabled=""
          height="16"
          opacity="1"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 117"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-fdasty"
            color="#8b78c4"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            117
          </span>
        </div>
        <div
          aria-label="Imaging: 61"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-167e66x"
            color="#c475ac"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            61
          </span>
        </div>
        <div
          aria-label="Sequencing: 34"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1pfbiry"
            color="#d08786"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            34
          </span>
        </div>
        <div
          aria-label="Proteomics: 15"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-mjzweb"
            color="#c1a273"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 78"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1a9itgu"
            color="#aab977"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            78
          </span>
        </div>
        <div
          aria-label="Prosthetics: 130"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-podhm1"
            color="#95cc92"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            130
          </span>
        </div>
        <div
          aria-label="Epigenomics: 100"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-189602o"
            color="#a9d0e6"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            100
          </span>
        </div>
        <div
          aria-disabled="true"
          aria-label="Remaining: 165"
          aria-pressed="false"
          class="css-h7y9mc"
          disabled=""
          role="button"
          tabindex="-1"
        >
          <div
            class="css-1qcdcmx"
          />
          <span
            class="css-1sjvubj"
            disabled=""
          >
            Remaining
          </span>
          <span
            class="css-ncdzc3"
            disabled=""
          >
            165
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StackedBarChart /> WithSelection story renders snapshot 1`] = `
<div
  style="margin: 150px;"
>
  <div
    class="css-qgcg3"
    width="360px"
  >
    <div
      class="css-pmr0i2"
    >
      <div
        class="css-1mg4zid"
      >
        Domain
      </div>
      <div
        class="css-1b52koj"
      >
        7
      </div>
    </div>
    <div
      class="css-1jlejkr"
    >
      <div
        class="css-1wtrkdh"
        width="360px"
      >
        <div
          class="css-ju3tfv"
          color="#8b78c4"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-zelymr"
          color="#c475ac"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-3orsqd"
          color="#d08786"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-ixw05v"
          color="#c1a273"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-12nkgds"
          color="#aab977"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1epb59t"
          color="#95cc92"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
        <div
          class="css-1mxzqmj"
          color="#a9d0e6"
          data-mui-internal-clone-element="true"
          height="16"
          opacity="1"
          tabindex="0"
        />
      </div>
      <div
        class="css-1t849lf"
      >
        <div
          aria-label="Transcriptomic: 22%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-fdasty"
            color="#8b78c4"
          />
          <span
            class="css-1sjvubj"
          >
            Transcriptomic
          </span>
          <span
            class="css-ncdzc3"
          >
            22%
          </span>
        </div>
        <div
          aria-label="Imaging: 11%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-167e66x"
            color="#c475ac"
          />
          <span
            class="css-1sjvubj"
          >
            Imaging
          </span>
          <span
            class="css-ncdzc3"
          >
            11%
          </span>
        </div>
        <div
          aria-label="Sequencing: 6%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1pfbiry"
            color="#d08786"
          />
          <span
            class="css-1sjvubj"
          >
            Sequencing
          </span>
          <span
            class="css-ncdzc3"
          >
            6%
          </span>
        </div>
        <div
          aria-label="Proteomics: 3%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-mjzweb"
            color="#c1a273"
          />
          <span
            class="css-1sjvubj"
          >
            Proteomics
          </span>
          <span
            class="css-ncdzc3"
          >
            3%
          </span>
        </div>
        <div
          aria-label="Spatial Transcriptomics: 15%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-1a9itgu"
            color="#aab977"
          />
          <span
            class="css-1sjvubj"
          >
            Spatial Transcriptomics
          </span>
          <span
            class="css-ncdzc3"
          >
            15%
          </span>
        </div>
        <div
          aria-label="Prosthetics: 24%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-podhm1"
            color="#95cc92"
          />
          <span
            class="css-1sjvubj"
          >
            Prosthetics
          </span>
          <span
            class="css-ncdzc3"
          >
            24%
          </span>
        </div>
        <div
          aria-label="Epigenomics: 19%"
          aria-pressed="false"
          class="css-r7qg0l"
          role="button"
          tabindex="0"
        >
          <div
            class="css-189602o"
            color="#a9d0e6"
          />
          <span
            class="css-1sjvubj"
          >
            Epigenomics
          </span>
          <span
            class="css-ncdzc3"
          >
            19%
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    style="margin-top: 40px;"
  >
    <div
      style="display: flex; gap: 8px; margin-bottom: 12px;"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1s4750s-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Select All
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-gkrbfh-MuiButtonBase-root-MuiButton-root"
        data-style="minimal"
        disabled=""
        tabindex="-1"
        type="button"
      >
        Clear Selection
      </button>
    </div>
    <div
      style="display: flex; flex-wrap: wrap;"
    />
  </div>
</div>
`;
